<resources>
  <string name="app_name">第几天</string>
  <string name="calculate">算一算</string>
  <string name="apart_days">相隔&#160;%1$d&#160;天</string>
  <string name="is_today">就在今天</string>
  <string name="title_calculate">计算</string>
  <string name="title_account">我</string>
  <string name="title_birthday">出生日:</string>
  <string name="wish_day">我想活到</string>
  <string name="age_cn">岁</string>
  <string name="title_forever_day">永恒日:</string>
  <string name="label_birthday">生日:</string>
  <string name="label_wish_age">我想活到</string>
  <string name="age_unit">岁</string>
  <string name="year">年</string>
  <string name="month">月</string>
  <string name="date">日</string>
  <string name="submit">提交</string>
  <string name="please_complete_birthday">请完善生日</string>
  <string name="please_input_wish_age">说说看，你想活多久？\n10000岁怎么样?</string>
  <string name="year_too_early">您的长寿超出我认知\n好吧，来点有趣的?</string>
  <string name="please_input_legal_month">月份不要乱填啦</string>
  <string name="please_input_legal_date">日期不要乱填啦</string>
  <string name="life_form_instruction">表格:%1$d x %2$d , 每一格表示%3$d年</string>
  <string name="end">终点</string>
  <string name="next_life">下辈子</string>
  <string name="wish_total_day">总共%1$d天</string>
  <string name="unknown_mark">\?</string>
  <string name="life_start">美妙人生从今天开始</string>
  <string name="date_of_life">今天是人生第%1$d天\n生命已经度过%2$s</string>
  <string name="days_before_born">距离出生还有%1$d天</string>
  <string name="today_is_death_day">今日即永恒</string>
  <string name="days_after_dead">已离开%1$d天</string>
  <string name="setting">设置</string>
  <string name="cancel">取消</string>
  <string name="today_to_xx">今天距离xx年x月x日有多少天？</string>
  <string name="my_xx_date">我的第xxx天是？</string>
  <string name="xx_to_xx">xx年x月x日出生的孩子的第xx天是？</string>
  <string name="days_between_date">xx年x月x日与yy年y月y日相隔多少天？</string>
  <string name="my_date">我的第</string>
  <string name="day">天</string>
  <string name="is">是</string>
  <string name="de">的第</string>
  <string name="and">和</string>
  <string name="apart">相隔</string>
  <string name="title_event">倒计时</string>
  <string name="event_title">距离: %1$s 还有</string>
  <string name="next_year">明年</string>
  <string name="confirm">确认</string>
  <string name="keyword">关键词</string>
  <string name="birthday">生日</string>
  <string name="next_vacation">下个假期</string>
  <string name="today_title">今天：%1$s</string>
</resources>
