<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
  <TextView
      android:id="@+id/tv1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/my_date"
      android:textColor="@color/black_45"
      android:textSize="18sp"
      android:textStyle="bold"
      />

  <EditText
      android:id="@+id/my_xx_days_edt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:maxLines="1"
      android:imeOptions="actionDone"
      android:textStyle="bold"
      app:layout_constraintTop_toBottomOf="@id/tv1"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      android:text="@string/day"
      android:textColor="@color/black_45"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBaseline_toBaselineOf="@id/my_xx_days_edt"
      app:layout_constraintStart_toEndOf="@id/my_xx_days_edt"
      />

  <TextView
      android:id="@+id/is_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/is"
      android:textColor="@color/black_45"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintTop_toBottomOf="@id/my_xx_days_edt"
      />

  <TextView
      android:id="@+id/my_target_date_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBaseline_toBaselineOf="@id/is_tv"
      app:layout_constraintStart_toEndOf="@id/is_tv"
      />

</android.support.constraint.ConstraintLayout>
