<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

  <EditText
      android:id="@+id/year_start_edt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal"
      android:imeOptions="actionNext"
      android:maxLines="1"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:textStyle="bold"
      />

  <TextView
      android:id="@+id/year_start_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/year"
      android:textColor="@color/black_45"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBaseline_toBaselineOf="@id/year_start_edt"
      app:layout_constraintLeft_toRightOf="@id/year_start_edt"
      />

  <EditText
      android:id="@+id/month_start_edt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal"
      android:maxLines="1"
      android:imeOptions="actionNext"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toRightOf="@id/year_start_tv"
      />

  <TextView
      android:id="@+id/month_start_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/month"
      android:textColor="@color/black_45"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBaseline_toBaselineOf="@id/year_start_edt"
      app:layout_constraintLeft_toRightOf="@id/month_start_edt"
      />

  <EditText
      android:id="@+id/day_start_edt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal"
      android:imeOptions="actionNext"
      android:maxLines="1"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toRightOf="@id/month_start_tv"
      />

  <TextView
      android:id="@+id/day_start_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/date"
      android:textColor="@color/black_45"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBaseline_toBaselineOf="@id/year_start_edt"
      app:layout_constraintLeft_toRightOf="@id/day_start_edt"
      />

  <TextView
      android:id="@+id/and_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/and"
      android:textColor="@color/black_45"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/day_start_tv"
      />

  <EditText
      android:id="@+id/year_end_edt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal"
      android:maxLines="1"
      android:textColor="@color/black"
      android:imeOptions="actionNext"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintTop_toBottomOf="@id/and_tv"
      />

  <TextView
      android:id="@+id/year_end_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/year"
      android:textColor="@color/black_45"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBaseline_toBaselineOf="@id/year_end_edt"
      app:layout_constraintLeft_toRightOf="@id/year_end_edt"
      />

  <EditText
      android:id="@+id/month_end_edt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal"
      android:maxLines="1"
      android:imeOptions="actionNext"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBaseline_toBaselineOf="@id/year_end_tv"
      app:layout_constraintLeft_toRightOf="@id/year_end_tv"
      />

  <TextView
      android:id="@+id/month_end_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/month"
      android:textColor="@color/black_45"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBaseline_toBaselineOf="@id/year_end_edt"
      app:layout_constraintLeft_toRightOf="@id/month_end_edt"
      />

  <EditText
      android:id="@+id/day_end_edt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:imeOptions="actionDone"
      android:inputType="numberDecimal"
      android:maxLines="1"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBaseline_toBaselineOf="@id/year_end_edt"
      app:layout_constraintLeft_toRightOf="@id/month_end_tv"
      />

  <TextView
      android:id="@+id/day_end_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/date"
      android:textColor="@color/black_45"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBaseline_toBaselineOf="@id/year_end_edt"
      app:layout_constraintLeft_toRightOf="@id/day_end_edt"
      />

  <TextView
      android:id="@+id/apart_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/apart"
      android:textColor="@color/black_45"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/day_end_tv"
      />

  <TextView
      android:id="@+id/apart_days_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/apart_tv"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      android:text="@string/day"
      android:textColor="@color/black_45"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBaseline_toBaselineOf="@id/apart_days_tv"
      app:layout_constraintLeft_toRightOf="@id/apart_days_tv"
      />

</android.support.constraint.ConstraintLayout>
